--- a/main.css
+++ b/main.css
@@ -14,6 +14,8 @@ html, body {
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     transition: background-color 1s, color 1s;
+    -webkit-transition: background-color 1s, color 1s;
+    -moz-transition: background-color 1s, color 1s;
     scroll-behavior: smooth;
     user-select: none;
     max-width: 23in;
@@ -50,6 +52,8 @@ a:hover, .pageLabel:hover {
 
 #page1 {
     animation: fadeIn 1.5s;
+    -webkit-animation: fadeIn 1.5s;
+    -moz-animation: fadeIn 1.5s;
 }
 
 #page1 > .greeting > .header {
@@ -101,6 +105,8 @@ a:hover, .pageLabel:hover {
     float: left;
     position: fixed;
     animation: sidebarSlideIn 0.5s;
+    -webkit-animation: sidebarSlideIn 0.5s;
+    -moz-animation: sidebarSlideIn 0.5s;
 }
 
 #funstuff {
@@ -125,6 +131,8 @@ a:hover, .pageLabel:hover {
     font-weight: bold;
     opacity: 0;
     transition: opacity 0.25s, color 0.25s;
+    -webkit-transition: opacity 0.25s, color 0.25s;
+    -moz-transition: opacity 0.25s, color 0.25s;
 }
 
 #funstuff:hover #dmTooltip {
@@ -143,6 +151,8 @@ a:hover, .pageLabel:hover {
     width: 1em;
     height: 1em;
     transition: margin 0.25s;
+    -webkit-transition: margin 0.25s;
+    -moz-transition: margin 0.25s;
 }
 
 #translate {
@@ -157,6 +167,8 @@ a:hover, .pageLabel:hover {
     width: 3em;
     height: auto;
     transition: margin 0.25s;
+    -webkit-transition: margin 0.25s;
+    -moz-transition: margin 0.25s;
 }
 
 .separator {
@@ -218,10 +230,15 @@ a:hover, .pageLabel:hover {
          width: 100vw;
          max-width: 600px;
          backdrop-filter: blur(10px);
+         -webkit-backdrop-filter: blur(10px);
          opacity: 0;
          z-index: -1;
          animation: none;
+         -webkit-animation: none;
+         -moz-animation: none;
          transition: opacity 0.25s;
+         -webkit-transition: opacity 0.25s;
+         -moz-transition: opacity 0.25s;
          padding: none;
      }
 
